[package]
name = "pyo3_j4rs_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = "0.13"
pyo3 = {version = "0.14", default-features = false, features = ["macros"]}
pyo3-built = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyo3_j4rs_example"

[dev-dependencies]
env_logger = "0.9"